[project]
name = "eodms_cli"
version = "3.6.3"
description = "The EODMS-CLI script is used to search, order and download imagery from the EODMS using the REST API (RAPI) service."
authors = [
    { name = "Kevin Ballantyne", email = "kevin.ballantyne@canada.ca" }
]
license = { file = "LICENSE" }

readme = "README.md"

requires-python = ">=3.9"

cache-dir = "./.venv"

[tool.poetry.dependencies]
py-eodms-rapi = ">=1.7.0"
requests = ">=2.23.0"
dateparser = ">=1.0.0"
geomet = ">=0.3.0"
click = ">=8.0.1"
shapely = ">=1.8.1"
python-dateutil = ">=2.8.1"
tqdm = ">=4.59.0"
numpy = "*"
packaging = "*"
colorama = "*"


[tool.poetry]
packages = [{ include = "scripts" , to = "eodms_cli" },
    { include = "eodms_cli.py" , to = "eodms_cli" }
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
